--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>小米官网案例</title>
-	<link rel="stylesheet" href="css/fonts/font.css">
+	<link rel="stylesheet" href="css/font.css">
 </head>
 <body>
 	
