--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="css/font.css">
 </head>
 <body>
-	
+	<nav></nav>
+	<header></header>
+	<div class="focus"></div>
+	<div class="ad"></div>
+	<div class="product"></div>
 </body>
-</html>
+</html>还原
