--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -2,14 +2,73 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>小米官网案例</title>
+	<title>仿小米官网案例</title>
+	<meta name="description" content="小米商城直营小米公司旗下所有产品，包括小米手机系列小米CC9 美图手机定制版、小米9、小米MIX Alpha，Redmi 红米系列Redmi K20 Pro、Redmi Note 8，小米电视、笔记本、米家智能家居等，同时提供小米客户服务及售后支持" /><!-- 网页描述 -->
+	<meta name="keywords" content="小米,RedmiNote8Pro,小米cc9,Redmi K20,美图手机,小米MIX Alpha,小米商城" /><!-- 关键字 -->
+	<meta name="viewport" content="width=1226" /><!-- 兼容处理 -->
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon" /><!-- 浏览器图标 -->
+	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="css/commo.css">
+	<link rel="stylesheet" href="css/index.css"><!-- CSS文件引入 -->
 </head>
 <body>
-	<nav></nav>
-	<header></header>
-	<div class="focus"></div>
-	<div class="ad"></div>
-	<div class="product"></div>
+	<!-- 头部开始 -->
+	<header class="clearfix">
+		<div class="contanier">
+			<ul class="nav">
+				<li class="nav-item"><a href="#">小米商城</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">MIUI</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">IoT</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">云服务</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">金融 </a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">有品 </a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">小爱开放平台</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">企业团购</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">资质证照</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">协议规则</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">下载app</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">Select Location</a></li>
+			</ul>
+			<div class="cart"></div>
+			<ul class="user-info">
+				<li class="nav-item"><a href="#">登录</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">注册</a><span class="shuxian">|</span></li>
+				<li class="nav-item"><a href="#">消息通知</a></li>
+			</ul>
+		</div>
+	</header>
+	<!-- 头部结束 -->
+	<!-- 焦点开始 -->
+	<div class="focus">
+		<div class="contanier">
+			<div class="title">
+				<h1 class="logo"><a href="#"></a></h1>
+				<ul class="focus-lis">
+					<li>小米手机</li>
+					<li>Redmi红米</li>
+					<li>电视</li>
+					<li>笔记本</li>
+					<li>家电</li>
+					<li>路由器</li>
+					<li>智能硬件</li>
+					<li>服务</li>
+					<li>社区</li>
+				</ul>
+				<div class="search"></div>
+			</div>
+			<div class="focus-pic"></div>
+			<div class="hot"></div>
+		</div>
+	</div>
+	<!-- 焦点结束 -->
+	<!-- 主要内容开始 -->
+	<div class="main-content">
+		<div class="contanier">133</div>
+	</div>
+	<!-- 主要内容结束 -->
+	<footer>
+		<div class="contanier">123</div>
+	</footer>
 </body>
-</html>还原
+</html>
