--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -30,7 +30,9 @@
 				<li class="nav-item"><a href="#">下载app</a><span class="shuxian">|</span></li>
 				<li class="nav-item"><a href="#">Select Location</a></li>
 			</ul>
-			<div class="cart"></div>
+			<div class="cart">
+				<i class="iconfont">&#xe60c;</i>购物车(<span class="cart_num">0</span>)
+			</div>
 			<ul class="user-info">
 				<li class="nav-item"><a href="#">登录</a><span class="shuxian">|</span></li>
 				<li class="nav-item"><a href="#">注册</a><span class="shuxian">|</span></li>
