--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -57,10 +57,34 @@
 					<li>服务</li>
 					<li>社区</li>
 				</ul>
-				<div class="search"></div>
+				<div class="search">
+					<form action="#">
+						<div class="search_icon clearfix"><i class="iconfont">&#xe616;</i></div>
+						<input type="text" style="border:1px solid #e0e0e0; ">
+					</form>	
+				</div>
 			</div>
-			<div class="focus-pic"></div>
-			<div class="hot"></div>
+			<div class="focus-pic">
+				<ul class="focus-lis">
+					<li class="focus-lis-item">手机&nbsp电话卡<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">电视&nbsp盒子<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">笔记本&nbsp平板<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">家电&nbsp插线板<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">出行&nbsp穿戴<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">智能&nbsp路由器<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">电源&nbsp配件<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">健康&nbsp儿童<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">耳机&nbsp音箱<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">生活&nbsp箱包<i class="iconfont">&#xe623;</i></li>
+				</ul>
+				<div class="slideshow"></div>
+			</div>
+			<div class="hot">
+				<div class="hot1"></div>
+				<div class="hot2"></div>
+				<div class="hot3"></div>
+				<div class="hot4"></div>
+			</div>
 		</div>
 	</div>
 	<!-- 焦点结束 -->
