--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -80,10 +80,17 @@
 				<div class="slideshow"></div>
 			</div>
 			<div class="hot">
-				<div class="hot1"></div>
-				<div class="hot2"></div>
-				<div class="hot3"></div>
-				<div class="hot4"></div>
+				<ul class="hot1">
+					<li class="hot1-item"><i class="iconfont">&#xe606;<br></i>小米秒杀</li>
+					<li class="hot1-item"><i class="iconfont">&#xe905;<br></i>企业团购</li>
+					<li class="hot1-item"><i class="iconfont">&#xe63f;<br></i>F码通道</li>
+					<li class="hot1-item"><i class="iconfont">&#xe906;<br></i>米粉卡</li>
+					<li class="hot1-item"><i class="iconfont">&#xe904;<br></i>以旧换新</li>
+					<li class="hot1-item"><i class="iconfont">&#xe907;<br></i>话费充值</li>
+				</ul>
+				<img src="images/rexiao-1.jpg" class="hot-product">
+				<img src="images/rexiao-2.jpg" class="hot-product">
+				<img src="images/rexiao3.jpg" class="hot-product">
 			</div>
 		</div>
 	</div>
