--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -77,16 +77,30 @@
 					<li class="focus-lis-item">耳机&nbsp音箱<i class="iconfont">&#xe623;</i></li>
 					<li class="focus-lis-item">生活&nbsp箱包<i class="iconfont">&#xe623;</i></li>
 				</ul>
-				<div class="slideshow"></div>
+				<div class="slideshow">
+					<img src="images/carousel-2.jpg" alt="">
+				</div>
 			</div>
 			<div class="hot">
 				<ul class="hot1">
-					<li class="hot1-item"><i class="iconfont">&#xe606;<br></i>小米秒杀</li>
-					<li class="hot1-item"><i class="iconfont">&#xe905;<br></i>企业团购</li>
-					<li class="hot1-item"><i class="iconfont">&#xe63f;<br></i>F码通道</li>
-					<li class="hot1-item"><i class="iconfont">&#xe906;<br></i>米粉卡</li>
-					<li class="hot1-item"><i class="iconfont">&#xe904;<br></i>以旧换新</li>
-					<li class="hot1-item"><i class="iconfont">&#xe907;<br></i>话费充值</li>
+					<li class="hot1-item hot1-item-henxian">
+						<a href="#"><i class="iconfont">&#xe606;<br></i>小米秒杀</a>
+					</li>
+					<li class="hot1-item hot1-item-henxian">
+						<a href="#"><i class="iconfont">&#xe905;<br></i>企业团购</a>
+					</li>
+					<li class="hot1-item hot1-item-henxian">
+						<a href="#"><i class="iconfont">&#xe63f;<br></i>F码通道</a>
+					</li>
+					<li class="hot1-item">
+						<a href="#"><i class="iconfont">&#xe906;<br></i>米粉卡</a>
+					</li>
+					<li class="hot1-item">
+						<a href="#"><i class="iconfont">&#xe904;<br></i>以旧换新</a>
+					</li>
+					<li class="hot1-item">
+						<a href="#"><i class="iconfont">&#xe907;<br></i>话费充值</a>
+					</li>
 				</ul>
 				<img src="images/rexiao-1.jpg" class="hot-product">
 				<img src="images/rexiao-2.jpg" class="hot-product">
