--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -66,20 +66,18 @@
 			</div>
 			<div class="focus-pic">
 				<ul class="focus-lis">
-					<li class="focus-lis-item">手机&nbsp电话卡<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">电视&nbsp盒子<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">笔记本&nbsp平板<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">家电&nbsp插线板<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">出行&nbsp穿戴<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">智能&nbsp路由器<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">电源&nbsp配件<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">健康&nbsp儿童<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">耳机&nbsp音箱<i class="iconfont">&#xe623;</i></li>
-					<li class="focus-lis-item">生活&nbsp箱包<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">手机&nbsp;电话卡<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">电视&nbsp;盒子<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">笔记本&nbsp;平板<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">家电&nbsp;插线板<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">出行&nbsp;穿戴<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">智能&nbsp;路由器<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">电源&nbsp;配件<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">健康&nbsp;儿童<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">耳机&nbsp;音箱<i class="iconfont">&#xe623;</i></li>
+					<li class="focus-lis-item">生活&nbsp;箱包<i class="iconfont">&#xe623;</i></li>
 				</ul>
-				<div class="slideshow">
-					<img src="images/carousel-2.jpg" alt="">
-				</div>
+				<img src="images/carousel-1.jpg" alt="">
 			</div>
 			<div class="hot">
 				<ul class="hot1">
