--- a/04-Project/01-mi.com-T/index-T.html
+++ b/04-Project/01-mi.com-T/index-T.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>仿小米官网案例</title>
+	<title>仿小米官网案例T</title>
 	<meta name="description" content="小米商城直营小米公司旗下所有产品，包括小米手机系列小米CC9 美图手机定制版、小米9、小米MIX Alpha，Redmi 红米系列Redmi K20 Pro、Redmi Note 8，小米电视、笔记本、米家智能家居等，同时提供小米客户服务及售后支持" /><!-- 网页描述 -->
 	<meta name="keywords" content="小米,RedmiNote8Pro,小米cc9,Redmi K20,美图手机,小米MIX Alpha,小米商城" /><!-- 关键字 -->
 	<meta name="viewport" content="width=1226" /><!-- 兼容处理 -->
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/index.css"><!-- CSS文件引入 -->
+	<link rel="stylesheet" href="css/index-T.css"><!-- CSS文件引入 -->
 </head>
 <body>
 	<!-- 头部开始 -->
@@ -120,9 +120,10 @@
 				</div>
 				<span class="arrow arr-right"><i class="iconfont">&#xe623;</i></span>
 				<span class="arrow arr-left"><i class="iconfont">&#xe628;</i></span>
+				
 			</div>
 			<div class="hot">
-				<div class="hot-left">
+				<div class="hot-left left">
 					<ul class="hot1">
 						<li class="hot1-item hot1-item-henxian">
 							<a href="#"><i class="iconfont">&#xe606;<br></i>小米秒杀</a>
@@ -144,7 +145,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="right">
+				<div class="hot-right">
 					<div class="hot-item"><a href="#"><img src="images/rexiao-1.jpg" alt=""></a></div>
 					<div class="hot-item"><a href="#"><img src="images/rexiao-2.jpg" alt=""></a></div>
 					<div class="hot-item"><a href="#"><img src="images/rexiao-3.jpg" alt=""></a></div>
@@ -155,26 +156,7 @@
 	<!-- 焦点结束 -->
 	<!-- 主要内容开始 -->
 	<div class="main-content">
-		<div class="contanier">
-			<div class="flash">
-				<div class="hd">
-					<h2>小米闪购</h2>
-					<div class="more">
-						<div class='move'><a href="#"><i class="iconfont">&#xe628</i></a></div>
-						<div class='move move-r'><a href="#"><i class="iconfont">&#xe623</i></a></div>
-					</div>
-				</div>
-				<div class="flash-pro"></div>
-			</div>
-			<!-- <div class="phone">
-				<div class="hd"></div>
-				<div class="flash-pro"></div>
-			</div>
-			<div class="appliance">
-				<div class="hd"></div>
-				<div class="flash-pro"></div>
-			</div> -->
-		</div>
+		<div class="contanier">133</div>
 	</div>
 	<!-- 主要内容结束 -->
 	<footer>
