--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -164,7 +164,13 @@
 						<div class='move move-r'><a href="#"><i class="iconfont">&#xe623</i></a></div>
 					</div>
 				</div>
-				<div class="flash-pro"></div>
+				<div class="flash-timer">
+					<div>14:00场</div>
+					<div>14:00场</div>
+					<div>距离结束还有</div>
+					<div>14:00场</div>
+				</div>
+				<div class="flash-product"></div>
 			</div>
 			<!-- <div class="phone">
 				<div class="hd"></div>
