--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -122,25 +122,25 @@
 				<span class="arrow arr-left"><i class="iconfont">&#xe628;</i></span>
 			</div>
 			<div class="hot">
-				<div class="hot-left">
-					<ul class="hot1">
-						<li class="hot1-item hot1-item-henxian">
-							<a href="#"><i class="iconfont">&#xe606;<br></i>小米秒杀</a>
-						</li>
-						<li class="hot1-item hot1-item-henxian">
-							<a href="#"><i class="iconfont">&#xe905;<br></i>企业团购</a>
-						</li>
-						<li class="hot1-item hot1-item-henxian">
-							<a href="#"><i class="iconfont">&#xe63f;<br></i>F码通道</a>
+				<div class="left">
+					<ul class="hot1 left">
+						<li class="hot1-item">
+							<a href="#"><i class="iconfont">&#xe606;</i>小米秒杀</a>
 						</li>
 						<li class="hot1-item">
-							<a href="#"><i class="iconfont">&#xe906;<br></i>米粉卡</a>
+							<a href="#"><i class="iconfont">&#xe905;</i>企业团购</a>
 						</li>
 						<li class="hot1-item">
-							<a href="#"><i class="iconfont">&#xe904;<br></i>以旧换新</a>
+							<a href="#"><i class="iconfont">&#xe63f;</i>F码通道</a>
 						</li>
 						<li class="hot1-item">
-							<a href="#"><i class="iconfont">&#xe907;<br></i>话费充值</a>
+							<a href="#"><i class="iconfont">&#xe906;</i>米粉卡</a>
+						</li>
+						<li class="hot1-item">
+							<a href="#"><i class="iconfont">&#xe904;</i>以旧换新</a>
+						</li>
+						<li class="hot1-item">
+							<a href="#"><i class="iconfont">&#xe907;</i>话费充值</a>
 						</li>
 					</ul>
 				</div>
@@ -156,27 +156,82 @@
 	<!-- 主要内容开始 -->
 	<div class="main-content">
 		<div class="contanier">
-			<div class="flash">
+			<div class="flash clearfix">
 				<div class="hd">
 					<h2>小米闪购</h2>
 					<div class="more">
-						<div class='move'><a href="#"><i class="iconfont">&#xe628</i></a></div>
-						<div class='move move-r'><a href="#"><i class="iconfont">&#xe623</i></a></div>
+						<a href="#"><i class="iconfont">&#xe628</i></a>
+						<a href="#"><i class="iconfont">&#xe623</i></a>
 					</div>
 				</div>
-				<div class="flash-timer">
+				<div class="left flash-timer">
 					<div>14:00场</div>
-					<div>14:00场</div>
+					<div><img src="images/shandian.png" alt=""></div>
 					<div>距离结束还有</div>
-					<div>14:00场</div>
+					<div>
+						<span>04</span>:<span>03</span>:<span>28</span>
+					</div>
 				</div>
-				<div class="flash-product"></div>
+				<div class="right flash-product">
+					<div class="product product-l">
+						<div class="product-img"><img src="images/dinling.png" alt=""></div>
+						<div class="product-name">叮零智能视频门铃&nbsp;白色</div>
+						<div class="product-intro">手机看门外，出门更放心</div>
+						<div class="product-price">239元<del>269元</del></div>
+					</div>
+					<div class="product product-l">
+						<div class="product-img"><img src="images/erji.png" alt=""></div>
+						<div class="product-name">小米活塞耳机&nbsp;清新版&nbsp;黑色</div>
+						<div class="product-intro">新鲜绽放，三色可选</div>
+						<div class="product-price">14.5元<del>29元</del></div>
+					</div>
+					<div class="product product-l">
+						<div class="product-img"><img src="images/zhijin.png" alt=""></div>
+						<div class="product-name">最生活浴巾·Air（4条装）&nbsp;白色</div>
+						<div class="product-intro">享用一条洁净好浴巾</div>
+						<div class="product-price">169元<del>269元</del></div>
+					</div>
+					<div class="product product-l">
+						<div id="headset"><img src="images/erji-2.png" alt=""></div>
+						<div class="product-name">叮零智能视频门铃&nbsp;白色</div>
+						<div class="product-intro">手机看门外，出门更放心</div>
+						<div class="product-price">239元<del>269元</del></div>
+					</div>
+				</div>
 			</div>
-			<!-- <div class="phone">
-				<div class="hd"></div>
-				<div class="flash-pro"></div>
+			<div class="adver adver-tb-1">
+				<a href="#"><img src="images/ad-1.webp" alt="Redmi Note Pro"></a>
 			</div>
-			<div class="appliance">
+			<div class="phone clearfix">
+				<div class="hd">
+					<h2>手机</h2>
+					<div class="view more">查看全部<span><i class="iconfont">&#xe623;</i></span></div>
+				</div>
+				<div class="flash-pro">
+					<div class="left">
+						<a href="#"><img src="images/shouji-left.webp" alt=""></a>
+					</div>
+					<div class="right">
+						<div class="product product-m">
+							<div class="product-img img2"><img src="images/shouji-1.webp" alt=""></div>
+							<div class="product-name">叮零智能视频门铃&nbsp;白色</div>
+							<div class="product-intro">手机看门外，出门更放心</div>
+							<div class="product-price">2799元起</div>
+						</div>
+						<div class="product product-m"></div>
+						<div class="product product-m"></div>
+						<div class="product product-m"></div>
+						<div class="product product-m"></div>
+						<div class="product product-m"></div>
+						<div class="product product-m"></div>
+						<div class="product product-m"></div>
+					</div>
+				</div>
+			</div>
+			<div class="adver adver-tb-2">
+				<a href="#"><img src="images/ad-2.webp" alt="小米电视特惠"></a>
+			</div>
+<!-- 			<div class="appliance">
 				<div class="hd"></div>
 				<div class="flash-pro"></div>
 			</div> -->
