--- a/04-Project/01-mi.com/index.html
+++ b/04-Project/01-mi.com/index.html
@@ -213,7 +213,7 @@
 					</div>
 					<div class="right">
 						<div class="product product-m">
-							<div class="product-img img2"><img src="images/shouji-1.webp" alt=""></div>
+							<div class="product-img img2"><img src="images/sjiadian-1.webp" alt=""></div>
 							<div class="product-name">叮零智能视频门铃&nbsp;白色</div>
 							<div class="product-intro">手机看门外，出门更放心</div>
 							<div class="product-price">2799元起</div>
